@@ -18,6 +18,7 @@
   <properties>
 	<javadoc.loc>${basedir}/../docs/src/javadoc</javadoc.loc>
 	<spring.osgi.export.pkg>org.springframework.osgi.extensions.annotation</spring.osgi.export.pkg>
+	<spring.osgi.symbolic.name>${symName.prefix}.extensions.annotations</spring.osgi.symbolic.name>
   </properties>
   
   <dependencies>
